--- a/style.css
+++ b/style.css
@@ -110,6 +110,22 @@ body {
   position: relative;
 }
 
+.descripcion {
+  position: relative;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: var(--primary);
+  color: white;
+  padding: 10px;
+  border-radius: 8px;
+  text-align: center;
+  font-weight: bold;
+  width: 80%;
+  font-size: 10px;
+  margin-top: 2rem;
+}
+
 @media (max-width:500px) {
   .tranding-slide {
     width: 37rem;
