--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ body {
 
 @media (max-width:500px) {
   #tranding .tranding-slider {
-    height: 45rem;
+    height: 50rem;
   }
 }
 
@@ -124,6 +124,14 @@ body {
   width: 80%;
   font-size: 10px;
   margin-top: 2rem;
+}
+
+@media (max-width: 600px) {
+  .descripcion {
+      font-size: 12px;
+      width: 90%;
+      margin-top: 1rem;
+  }
 }
 
 @media (max-width:500px) {
